--- a/publications.html
+++ b/publications.html
@@ -3,100 +3,216 @@ layout: default
 
 ---
 
-<section>
-<h1 >List of Publications </h1><a href=./publications_test>testi</a>
-<div class="parent">
-<div class="img">
-<img width=100% ; style="style="vertical-align:middle; padding:9px 13.2% 0 0"" src="/images/Our_proposal.jpg"/>
-</div>
-<div class="text">
-<p>
-M. Abbasi, D. Laurendeau, C. Gagné, &quot;Self-supervised Robust Object Detectors from Partially Labelled Datasets&quot;, Arxiv Preprint, 2020. <b><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></b></p>
-</div>
-</div>
-<div class="parent">
-<div class="img">
-<img width=100% ;  style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/Ensemble.jpg"/>
-</div>
-<div class="text">
-<p>M. Abbasi, A. Rajabi, C. Gagné, R. Bobba, &quot;Toward Adversarial Robustness by Diversity in an Ensemble of Specialized Deep Neural Networks&quot;, Long paper in Canadian Conference on AI, 2020 (<a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <b><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code]</a></b></p>
+<body>
+
+  <div class="container">
+
+<ul class="list-group">
+      <li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
+        <div class="media">
+          <div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:25%;" href=""><img width="100%" src="/images/Our_proposal.jpg"></div>            
+<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
+
+            <p style="font-size:13.4px; line-height:155%"><strong>Self-supervised Robust Object Detectors from Partially Labelled Datasets</strong></p>
+<b>Mahdieh Abbasi</b>, Denis Laurendeau, Christian Gagné; Arxiv, 2020, <b><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></b></p>
 </div>
 </div>
-<div class="parent">
-<div class="img">
-<img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/ECAI.jpg"/>
+      </li>
+    </ul>
+
+<p style="margin:-8.5px 0px 0px 0px;"></p>
+
+
+<ul class="list-group">
+      <li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
+        <div class="media">
+          <div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:20%;" href=""><img width="100%" src="/images/Ensemble.jpg"></div>  
+          
+	  <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
+<p style="font-size:13.4px; line-height:155%"><strong>Toward Adversarial Robustness by Diversity in an Ensemble of Specialized Deep Neural Networks</strong></p>
+<p style="font-size:13.4px"><b>Mahdieh Abbasi</b>, Arezoo Rajabi, Christian Gagne, Rakesh B. Bobba;
+            <b>Long paper in Canadian Conference on AI</b>, 2020(<a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <b><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code]</a></b></p>
 </div>
-<div class="text">
-<p>
-M. Abbasi, C. Shui, A. Rajabi, C. Gagné, R. Bobba, &quot;Towards metrics for differentiating Out-of-Distribution sets&quot;,
-  NeurIPS Workshop on Safety and Robustness in Decision-Making, 2019, and accepted in ECAI, 2020 (Oral). <b><a href="https://arxiv.org/abs/1910.08650">[PDF]</a> <a href="">[Talk]</a>
+</div>
+      </li>
+    </ul>
+
+
+
+
+<p style="margin:-9px 0px 0px 0px;"></p>
+
+<ul class="list-group">
+<li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
+<div class="media">
+
+<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:20%;" href=""><img width="100%" src="/images/ECAI.jpg"></div>
+
+<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
+
+<p style="font-size:13.4px; line-height:155%"><strong>Towards metrics for differentiating Out-of-Distribution sets</strong></p>
+
+<p style="font-size:13.4px; line-height:155%"><b>Mahdieh Abbasi</b>, Changjian Shui, Arezoo Rajabi, Christian Gagne, Rakesh B. Bobba; In <b>European Conference on AI</b>, 2020 (<b>Oral</b>; acceptance rate 26.8%). <b><a href="https://arxiv.org/abs/1910.08650">[PDF]</a> <a href="">[Talk]</a>
   <a href="/Posters/2020_08_ECAI_Presentation.pdf">[Presentation]</a><a href="https://github.com/mahdaneh/OOD_set_Metrics">[Code]</a></b></p>
 </div>
 </div>
-<div class="parent">
-<div class="img">
-<img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/MTL.jpg" />
-</div>
-<div class="text">
-<p>
-C. Shui, M. Abbasi, L.E. Robitaille, B. Wang, C. Gagné, &quot;A Principled Approach for Learning Task Similarity in Multitask Learning&quot;, 
-  International Joint Conference on Artificial Intelligence (IJCAI) 2019. <b"><a href="https://arxiv.org/abs/1903.09109">[PDF]</a> <a href="/Posters/2019_07___Deep_Multitask___IJCAI_Poster.pdf">[Poster]</a><a href="">[Code]</a></b></p>
+</li>
+</ul>
+
+
+
+<p style="margin:-9px 0px 0px 0px;"></p>
+
+<ul class="list-group">
+<li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
+<div class="media">
+
+<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:20%;" href=""><img width="100%" src="/images/MTL.jpg"></div>
+
+<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
+
+<p style="font-size:13.4px; line-height:155%"><strong>A Principled Approach for Learning Task Similarity in Multitask Learning</strong></p>
+<p style="font-size:13.4px; line-height:155%"> Changjian Shui, Mahdieh Abbasi, Louis-Emile Robitaille, Boyu Wang, Christian Gagné; In <b>International Joint Conference on Artificial Intelligence </b>, 2019 (Poster, acceptance rate 18%). <b><a href="https://arxiv.org/abs/1903.09109">[PDF]</a> <a href="/Posters/2019_07___Deep_Multitask___IJCAI_Poster.pdf">[Poster]</a><a href="">[Code]</a></b></p>
 
 </div>
 </div>
 
+</ul>
+</li>
 
-<div class="parent">
-<div class="img">
-<img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/DSML.jpg" />
-</div>
-<div class="text">
 
-<p>
-M. Abbasi, A. Rajabi, C. Gagné, R. B. Bobba, &quot;Towards Dependable Deep Convolutional Neural Networks (CNNs) with Out-Distribution Learning&quot;, Dependable and Secure Machine Learning (DSML), co-located with Dependable System Networks (DSN), 2018. 
+
+
+
+
+<p style="margin:-9px 0px 0px 0px;"></p>
+
+<ul class="list-group">
+<li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
+<div class="media">
+
+<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:20%;" href=""><img width="100%" src="/images/DSML.jpg"></div>
+
+<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
+
+<p style="font-size:13.4px; line-height:155%"><strong>Towards Dependable Deep Convolutional Neural Networks (CNNs) with Out-Distribution Learning</strong></p>
+
+<p style="font-size:13.4px; line-height:155%"><b>Mahdieh Abbasi</b>, Arezoo Rajabi, Christian Gagné, Rakesh B. Bobba; In <b>Dependable and Secure Machine Learning (DSML)</b>, co-located with Dependable System Networks (DSN), 2018. 
 <b><a href="https://arxiv.org/pdf/1804.08794.pdf">[PDF]</a> <a href="/Posters/DSML Presentation.pdf">[Presentation]</a></b></p>
+</p>
+
 </div>
 </div>
-<div class="parent">
-<div class="img">
-<img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/A-CNN.jpg" />
-</div>
-<div class="text">
-<p>
-M. Abbasi, A. Rajabi, A.S. Mozafari, R.B. Bobba, C. Gagné, &quot;Controlling Over-generalization and its Effect on Adversarial Examples Generation and Detection&quot;, Arxiv Preprint, 2018.
-<b><a href="https://arxiv.org/abs/1808.08282">[PDF]</a> <a href="https://github.com/mahdaneh/Out-distribution-learning_FSvisulization">[Code]</a></b></p>
+
+</ul>
+</li>
+
+
+
+
+
+
+
+
+
+<p style="margin:-9px 0px 0px 0px;"></p>
+
+<ul class="list-group">
+<li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
+<div class="media">
+
+<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:20%;" href=""><img width="100%" src="/images/A-CNN.jpg"></div>
+
+<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
+
+<p style="font-size:13.4px; line-height:155%"><strong>Controlling Over-generalization and its Effect on Adversarial Examples Generation and Detection</strong></p>
+
+<p style="font-size:13.4px; line-height:155%"><b>Mahdieh Abbasi</b>, Arezoo Rajabi, Azadeh S. Mozafari, Rakesh B.  Bobba, Christian Gagné; In Arxiv, 2018. <a href="https://arxiv.org/abs/1808.08282">[PDF]</a> <a href="https://github.com/mahdaneh/Out-distribution-learning_FSvisulization">[Code]</a></b></p>
+
 </div>
 </div>
 
 
-<div class="parent">
-<div class="img">
-<img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/ICLR17.jpg" />
-</div>
-<div class="text">
-M. Abbasi, and C. Gagné. &quot;Robustness to Adversarial Examples through an Ensemble of Specialists.&quot; International Conference on Learning Representations (ICLR) Workshop, 2017.
-  <b><a href="https://arxiv.org/pdf/1702.06856.pdf">[PDF]</a> <a href="/Posters/ICLR17.pdf">[Poster]</a></b>
-</div>
-</div>
-<div class="parent">
-<div class="img">
-<img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/ADMM.jpg" />
-</div>
-<div class="text">
-F. Kiaee, C. Gagné, M.Abbasi, &quot;Alternating Direction Method of Multipliers for Sparse Convolutional Neural Networks.&quot;, Arxiv Preprint, 2017
-  <b><a href="https://arxiv.org/abs/1611.01590">[PDF]</a></b>
-</div>
-</div>
-<div class="parent">
-<div class="img">
-<img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/3DV15.jpg" />
-</div>
-<div class="text">
-M. Abbasi, H. R. Rabiee, and C. Gagné. &quot;Monocular 3D Human Pose Estimation with a Semi-supervised Graph-based Method.&quot;
-  International Conference on 3DVision, IEEE, 2015 (Oral).
-  <b><a href="https://ieeexplore.ieee.org/document/7335521/">[PDF]</a> <a href="/Posters/Poster.pdf">[Poster]</a></b>
+</ul>
+</li>
+
+
+
+
+
+<p style="margin:-9px 0px 0px 0px;"></p>
+
+<ul class="list-group">
+<li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
+
+<div class="media">
+
+<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:20%;" href=""><img width="100%" src="/images/ICLR17.jpg"></div>
+
+<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
+
+<p style="font-size:13.4px; line-height:155%"><strong>Robustness to Adversarial Examples through an Ensemble of Specialists</strong></p>
+
+<p style="font-size:13.4px; line-height:155%"><b>Mahdieh Abbasi</b> and Christian Gagné; In <b>International Conference on Learning Representations (ICLR) </b> Workshop, 2017.<b><a href="https://arxiv.org/pdf/1702.06856.pdf">[PDF]</a> <a href="/Posters/ICLR17.pdf">[Poster]</a></b></p>
+
 </div>
 </div>
 
 
-      </section>
+</ul>
+</li>
+
+
+
+
+<p style="margin:-9px 0px 0px 0px;"></p>
+
+<ul class="list-group">
+<li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
+
+<div class="media">
+
+<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:20%;" href=""><img width="100%" src="/images/ADMM.jpg"></div>
+
+<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
+
+<p style="font-size:13.4px; line-height:155%"><strong>Alternating Direction Method of Multipliers for Sparse Convolutional Neural Networks</strong></p>
+
+<p style="font-size:13.4px; line-height:155%">Farkhondeh Kiaee, Christian Gagné, <b>Mahdieh Abbasi</b>; In Arxiv, 2017</p>
+
+</div>
+</div>
+
+
+</ul>
+</li>
+
+
+
+
+<p style="margin:-9px 0px 0px 0px;"></p>
+
+<ul class="list-group">
+<li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
+
+<div class="media">
+
+<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:20%;" href=""><img width="100%" src="/images/3DV15.jpg"></div>
+
+<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
+
+<p style="font-size:13.4px; line-height:155%"><strong>Monocular 3D Human Pose Estimation with a Semi-supervised Graph-based Method</strong></p>
+
+<p style="font-size:13.4px; line-height:155%"><b>Mahdieh Abbasi</b>, Hamid Reza Rabiee, Christian Gagné; In <b>3D Computer Vision IEEE Conference</b>, 2015 (acceptance rate for <b>oral</b> 15%)  <b><a href="https://ieeexplore.ieee.org/document/7335521/">[PDF]</a> <a href="/Posters/Poster.pdf">[Poster]</a></b></p>
+
+</div>
+</div>
+
+
+</ul>
+</li>
+
+
+</div>
+
+</body>
