--- a/Blogs/Our_self_Supervised.html
+++ b/Blogs/Our_self_Supervised.html
@@ -65,17 +65,18 @@ If the proxy model classifies an ROI as its extra class (meaning it contains a n
 
   <h2 id="s2"> 2. Our framework in nutshell</h2>
 
-In this post, we briefly explain the stages of our proposed framework. Please refer to our <a href="https://arxiv.org/abs/2005.11549"> Arxiv paper</a> to read about more details.
+In this post, we briefly explain the stages of our proposed framework. Please refer to our <a href="https://arxiv.org/abs/2005.11549"> Arxiv paper</a>
+  to read with more details.
 
 <ul>
-  <li><strong>Stage 1</strong>: In training phase at a given epoch, YOLO outputs some estimated ROIs. They either contains an OOI or not. Then, we extract these ROIs from the given image. </li>
-  <li><strong>Stage 2</strong>: The extracted ROIs are fed to an pre-trained A-CNN,
-    so that it predicts whether the ROIs contain an OOI through either classifying them as one of it pre-defined categories or reject them (equivalent to classifying a ROI to its extra class).
-  The ROIs classified as one of pre-defined categories (corresponding to the categories of objects of interest) are forwarded to the next stage.</li>
+  <li><strong>Stage 1</strong>: in training phase (at a given epoch), YOLO outputs some estimated ROIs, which may (may not) contains an OOI. These ROIs from the given image are extracted. </li>
+  <li><strong>Stage 2</strong>: feeding a pre-trained A-CNN with the extracted ROIs,
+    they are classified as one of the pre-defined categories (corresponding to the categories of objects of interest) or reject them (equivalent to the A-CNN's extra class).
+  The ROIs that are <b>classified confidently</b> as one of the pre-defined categories are forwarded to the next stage.</li>
 
-  <li><strong>Stage 3</strong>: If an ROI <b>classified confidently</b> as one of the categories of interest, then a new pseudo-label is created, included coordinate info of the ROI, objectness score, and category.
-    Two latter values are the maximum predictive confidence and its corresponding class estimated by A-CNN for given ROI. </li>
-  <li><strong> Stage 4</strong>: the generated pseudo-labels and ground truth are used for training YOLO.</li>
+  <li><strong>Stage 3</strong>: for the ROIs passed from the previous stage, we generate new pseudo-labels, each label includes the coordinate info of a ROI, objectness score, and category.
+    Two latter values are the maximum predictive confidence and its corresponding class estimated by A-CNN for the given ROI. </li>
+  <li><strong> Stage 4</strong>: the generated pseudo-labels and the ground truth are collectively used for training YOLO.</li>
 
 </ul>
 
@@ -84,16 +85,23 @@ In this post, we briefly explain the stages of our proposed framework. Please re
 
   <h3> Extracted ROIs with different sizes</h3>
   <p>
-  Originally, the CNNs that have some FC layers can not process inputs with different sizes since the FC layers in the architecture can accept only the inputs having identical size. However, feeding the convolution layers
-  with different sizes will incur outputs with different sizes, which are indeed the input for the successive FC layer in such an architecture. To address this issue, <a href="https://arxiv.org/abs/1406.4729">SPP (Spatial Pyramid Pooling)</a> layer is proposed.
-  Using SPP, we then able to process ROIs with different sizes. However, from technical view point (pytorch), we can not have a batch of inputs with different sizes.
-  To circumvent this challenge, we used the k-means trick. In this trick, the input samples with different sizes are clustered so that the samples with similar sizes are placed
-  in a cluster. Then, the samples of a cluster are padded so that they all have identical size. Note that simply using naive padding, i.e. padding images to all have size of the largest image, is not recommended since it can create inputs with immense zero-margin, especially for tiny images.
+  Originally, the CNNs that have some FC layers can not process inputs with different sizes since the FC layers in the architecture can accept the inputs with identical size.
+    However, feeding the convolution layers
+  with different sizes incur outputs with different sizes, which are then passed to the successive FC layer in such an architecture.
+    To address this issue, <a href="https://arxiv.org/abs/1406.4729">SPP (Spatial Pyramid Pooling)</a> layer is proposed, which allows a CNN process inputs data with various sizes.
+
+  Using SPP, we then able to process the ROIs with different sizes. However, from technical view point (pytorch), we can not have a batch of inputs with different sizes.
+  To circumvent this challenge, we used "k-means trick" so that minimized the zero-pad added to the images. In this trick, the input samples with different sizes are
+    clustered so that the samples with similar sizes are placed
+  in a cluster. Then, the samples of a cluster are padded so that they all have an identical size. Note that simply using naive padding, i.e. padding images to all have size of the largest image, is not recommended since it can create inputs with immense zero-margin, especially for tiny images.
   </p>
-  <h3>Generate pseudo-labels only for confident predictions</h3>
+
+  <h3>Generate pseudo-labels only for the confident predictions</h3>
   <p>
-  To create high confidence prediction, we used patch-drop to creat different versions of an ROI, then averaging predictions of A-CNN on all these version can lead to better
-  (in terms of calibration) prediction. Later, we only accept the predictions that are large enough (larger than a threshold). Therefore, the chance of misclassification can be reduced to avoid generate incorrect pseudo-labels.
+  To create high confidence prediction,
+    we used patch-drop to create different versions of an ROI, then averaging their predictions by the A-CNN, which then lead to better predictions
+  in terms of calibration and reducing error. Later, we accept only those predictions with high confidence (larger than a threshold).
+    Therefore, the chance of misclassification can be reduced, avoid generation of incorrect pseudo-labels.
   </p>
 </section>
 </div>
