--- a/Blogs/image_blur.html
+++ b/Blogs/image_blur.html
@@ -21,6 +21,10 @@
   </script>
   <link rel="stylesheet" href="../css/blog_style.css">
 
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/styles/default.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/highlight.min.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
   </head>
 
 
@@ -31,15 +35,13 @@
     <h2> Table of Content </h2>
     <ul >
 
-    <li><h3> <a href="#s1"> 1. Introduction </a></h3></li>
-    <li><h3> <a href="#s2"> 2. Scenarios leading to missing-label instance </a></h3></li>
-    <li><h3> <a href="#s3"> 3. Background </a></h3></li>
-    <ul>
-      <li><h4 > <a href="#s4"> YOLO's losses </a></h4></li>
-    </ul>
+    <li><h3> <a href="#s1"> 1. Fourier transform </a></h3></li>
+    <li><h3> <a href="#s2"> 2. Image blurring </a></h3></li>
+        <ul>
+            <li> <a href="#s3"> 2.1. Python code snippet</a></li>
+            <li><a href="#4"> 2.2. Results</a></li>
+        </ul>
 
-    <li><h3> <a href="#s5"> 4. YOLO's performance declination by missing labels </a></h3></li>
-    <li><h3> <a href="#s6"> 5. Addressing YOLO's performance degradation </a></h3></li>
   </ul>
   <a href="../index.html">
     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
@@ -54,7 +56,7 @@
     <section>
         <h1> Fourier transform for image blurring</h1>
 
-        <h2>Quick introduction: Fourier transform</h2>
+        <h2 id="s1">Quick introduction: Fourier transform</h2>
         <p>
         The key point of this post is about how to use Fourier transform for <b>efficient image blurring</b>.
         First, we need to review Fourier transform to transfer an 2D image from spatial domain (pixel space), i.e. $I(x,y)$
@@ -66,41 +68,77 @@
         its Fourier transform is computed as follows:
         </p>
 
-$F(u,v) = \sum_{x=0}^{N-1}\sum_{y=0}^{M-1}I(x,y)\exp(-j2\pi(\frac{ux}{N}+\frac{vy}{M})).$
+$$F(u,v) = \sum_{x=0}^{N-1}\sum_{y=0}^{M-1}I(x,y)\exp(-j2\pi(\frac{ux}{N}+\frac{vy}{M})).$$
 
         <p>The image in the frequency domain consists of two parts: a real part (denoted as $R(u,v)$) and an imaginary part ($I(u,v)$), i.e. $F(u,v) = R(u,v) + I(u,v)j$.
-        As it is shown in Figure 1, we can represent $F(u,v)$ in the polar coordinate system, instead of the Cartesian one:</p>
+            As it is shown in <a href="#fig1">Figure 1</a>, we can represent $F(u,v)$ in the polar coordinate system, instead of the Cartesian one:</p>
 
-$F(u,v) =  \underbrace{|F(u,v)|}_{\text{Magnitude}}\exp(j \underbrace{\phi(u,v)}_{\text{phase}}),$
+$$F(u,v) =  \underbrace{|F(u,v)|}_{\text{Magnitude}}\exp(j \underbrace{\phi(u,v)}_{\text{phase}}),$$
+        where $|F(u,v)|=\sqrt{R(u,v)^2+I(u,v)^2}$ and $\phi(u,v) = \arctan(I(u,v)/R(u,v))$ are called magnitude and phase at a given frequency $u,v$, respectively.
 
-where $|F(u,v)|=\sqrt{R(u,v)^2+I(u,v)^2}$ and $\phi(u,v) = \arctan(I(u,v)/R(u,v))$ are called magnitude and phase at a given frequency $u,v$, respectively.
 
 
 <div class="parent">
         <div class="text">
       <figure>
-      <img width="70%" src="../images/image_blur/polar.png" class='center'>
-<figcaption>Figure 1: representing a complex number ($x+iy$) in polar coordinate $re^{j\theta}$ </figcaption>
+      <img width="30%" src="../images/image_blur/polar.png" class='center'>
+
+          <figcaption><span id="fig1">Figure 1</span>: representing a complex number ($x+iy$) in polar coordinate $re^{j\theta}$. </figcaption>
 </figure>
         </div>
       </div>
 
 
-<h2>Image blurring </h2>
+<h2 id="s2">Image blurring </h2>
 <p>
 A blurred image can be achieved by obscuring the high frequencies in the frequency domain,
-        known as low pass filter --meaning only the low frequencies are allowed to be passed through a filter; e.g. 1st image at 2nd row in <a href="#fig2">figure 2</a>.
-
+        known as low pass filter --
+    meaning only the low frequencies are allowed to be passed through a filter; e.g.
+    the 1st image at 2nd row in <a href="#fig2">figure 2</a> is a Gaussian low pass filter of band width 10.
     This is equivalent to removing the edges in the spatial domains,
     which can be achieved by convolving the image with a spatial kernel filter. However,
     the image blurring can simply be done by one simple multiplication; multiplying the input image with a defined low-pass filter in frequency domain.
 </p>
+        <div>
+            <h3 id="s3">Code snippet image blurring</h3>
+<pre><code class="python">import numpy as np
+from numpy import fft
+def Gaussian_filter(shape, kernel_width, Low=True ):
 
+    X,Y=np.meshgrid(range(shape[1]), range(shape[0]))
+    # center of image
+    Cx , Cy =   shape[1]/2, shape[0]/2
+    # Gaussian filter with given kernel_width
+    fltr = np.exp(-((X-Cx)**2+(Y-Cy)**2)/(2*(kernel_width)**2))
+
+    # high pass filter is simply 1-fltr
+    if not Low:
+        fltr = 1-fltr
+
+    return fltr
+
+orig_frq = np.fft.fftshift(np.fft.fft2(I)) #computing 2D fft of the given image using numpy, then zero-center shifting it.
+GLP_10 = Gaussian_filter(I.shape, 10)
+filter_img_frq=orig_frq* GLP_10
+# back the filtered image to spatial domain by inverse of 2D fft
+filter_img_spt=np.fft.ifft2(np.fft.ifftshift(filter_img_frq));
+</code></pre>
+        </div>
+            <h3 id ="s4"> Results</h3>
+<p>
+         In <a href="#fig2">figure 2</a>, the 1st row shows the input image, the filtered image, the removed pixel (difference).
+              2nd row represents the Gaussian low pass filter and the above images
+              by their amplitude in frequency domain. Similarly,
+              the 3rd row exhibits their phase in frequency domain.
+    The last column represents densities of pixel intensity (1st row), amplitude --$log |F|$ (2nd row) and phase (third row) for the original images and the filtered one.
+
+</p>
 <div class="parent">
         <div class="text">
       <figure>
-      <img width="70%" src="../images/image_blur/low10.jpg" class="center">
-          <figcaption><span id="fig2">Figure 2</span>: Image blurring; low pass filter (band width= 10). 1st row shows the input image, the filtered image, the removed pixel, and the density of pixel intensity in both original image and the filtered one. 2nd row shows a Gaussian low pass filter (kernel width=10) and the images by their amplitude in frequency domain. 3rd row shows their phase in frequency domain. The last column represents densities of pixel intensity (1st row), signal amplitude (2nd row) and signal phase (third row).</figcaption>
+      <img width="100%" src="../images/image_blur/low10_orig.png" class="center">
+          <figcaption><span id="fig2">Figure 2</span>:
+              Image blurring; using a low pass filter (kernel width= 10).</figcaption>
 </figure>
         </div>
  </div>
@@ -111,7 +149,7 @@ In <a href="#tb1">figure 3</a>,  each row is exhibiting the original image (1st 
         As can be seen,
         the GLP filter with larger (smaller)
         kernel width leads to less (higher) blurriness,
-        meaning it allows to pass more (less) higher frequencies. The last column . Notice the larger the
+        meaning it allows to pass more (less) higher frequencies.
 </p>
 
     <table id="tb1">
