--- a/Blogs/image_blur.html
+++ b/Blogs/image_blur.html
@@ -138,7 +138,7 @@ filter_img_spt=np.fft.ifft2(np.fft.ifftshift(filter_img_frq));
       <figure>
       <img width="100%" src="../images/image_blur/low10_orig.png" class="center">
           <figcaption><span id="fig2">Figure 2</span>:
-              Image blurring; using a low pass filter (kernel width= 10).</figcaption>
+              Image blurring; using a low pass filter (kernel width= 10). 1st row: original image, filtered one, and their difference; 2nd row: amplitude of the images, 3rd row: phase of the images</figcaption>
 </figure>
         </div>
  </div>
